tests/fixtures/guardrails/invalid/route-dynamic-import-promise-chain-bypass/app/routes/products.ts
const delegatedTarget = "~/app/services/products.server";

export async function loader() {
  return import(delegatedTarget).then(function () {
    return " hat ".trim();
  });
}
